--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,12 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
@@ -22,9 +26,11 @@
     "@tanstack/react-table": "^8.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.445.0",
     "next-themes": "^0.3.0",
     "react": "^18.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.0.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.8.1",
